WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78147
Fix issue encountered while debugging stacktraces
https://bugs.webkit.org/show_bug.cgi?id=78147
Summary
Fix issue encountered while debugging stacktraces
Oliver Hunt
Reported
2012-02-08 13:27:58 PST
Fix issue encountered while debugging stacktraces
Attachments
Patch
(2.61 KB, patch)
2012-02-08 13:31 PST
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2012-02-08 13:31:43 PST
Created
attachment 126143
[details]
Patch
Oliver Hunt
Comment 2
2012-02-08 13:36:05 PST
Committed
r107128
: <
http://trac.webkit.org/changeset/107128
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug