Fix issue encountered while debugging stacktraces https://bugs.webkit.org/show_bug.cgi?id=78147

Reviewed by Gavin Barraclough.

Debugging is easier if we always ensure that we have a non-null
inferred name.

* runtime/Executable.cpp:
(JSC::FunctionExecutable::FunctionExecutable):

Canonical link: https://commits.webkit.org/95039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107128 268f45cc-cd09-0410-ab3c-d52691b4dbfc